--- a/src/entities/TrackItem/ui/TrackItem.module.scss
+++ b/src/entities/TrackItem/ui/TrackItem.module.scss
@@ -9,6 +9,28 @@
   display: flex;
 }
 
+.TrackItemIsCurrent {
+  background-color: red;
+}
+
+.TrackItemCardContainer {
+  width: 100%;
+  position: relative;
+}
+
+.TrackItemIsPlaying {
+  background-color: #ebecf0;
+}
+
+.TrackItemRightSlotContainer {
+  @include resetPaddingForDivVkUI;
+  @include lineclamp(1);
+  display: flex;
+  margin-left: auto;
+  align-items: center;
+  gap: 2px;
+}
+
 .TrackItemOverlay {
   transition: background-color 0.3s ease;
   pointer-events: none; // Чтобы не мешал обработке кликов на Card
@@ -17,7 +39,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: 0;
 }
 
 .imageOverlay {
@@ -31,14 +53,38 @@
   pointer-events: none;
 }
 
+.TrackItemPlayIcon {
+  display: block;
+  position: absolute;
+  top: 8px;
+  left: 8px;
+  border-radius: 50%;
+  background-color: var(--vkui--color_icon_contrast);
+  z-index: 2;
+}
+
 .imageContainer {
   @include resetPaddingForDivVkUI;
   position: relative;
+  max-height: 40px;
+  min-width: 53px;
+}
+
+.TrackItemNoteIconContainer {
+  @include resetPaddingForDivVkUI;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 40px;
+  min-height: 40px;
+  border-radius: 8px;
+  background-color: var(--vkui--color_background);
 }
 
 .TrackItemImg {
   width: 100%;
   height: 100%;
+  max-width: 100%;
   margin-right: 13px;
   border-radius: 8px;
   object-fit: cover;
@@ -51,21 +97,45 @@
   z-index: 2;
 }
 
+.TrackItemTime {
+  --vkui--font_text--font_size--compact: 13px;
+  color: var(--colorSecondary);
+}
+
 .TrackItemInfoAboutTrack {
   @include resetPaddingForDivVkUI;
+  flex-grow: 1;
+  margin-right: 12px;
+}
+
+.TrackItemTitleTrackContainer {
+  width: fit-content;
 }
 
 .TrackItemTitleTrack {
   --vkui--font_text--font_family--regular: var(--fontRoboto);
   --vkui--font_weight_accent1: 400;
   --vkui--font_text--font_size--compact: 16px;
+  --vkui--color_text_link: var(--vkui--color_text_primary_invariably);
   line-height: 20px;
   letter-spacing: 0.15px;
   text-align: left;
 }
 
+.TrackItemSingerTitleLink {
+  --vkui--color_text_link: var(--colorSecondary);
+}
+
+.TrackItemSingerTitleContainer {
+  width: min-content;
+}
+
 .TrackItemSingerTitle {
   --vkui--font_text--font_family--regular: var(--fontRoboto);
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   font-size: var(--TrackItemSingerTitleMr);
   font-weight: 400;
   line-height: 16px;
