--- a/src/app/styles/_base.scss
+++ b/src/app/styles/_base.scss
@@ -2,3 +2,7 @@
   width: clamp(360px, 35vw, 800px);
   margin: 0 auto;
 }
+
+:global(.isHiddenVkUiSliderThumb .vkuiSliderThumb) {
+  display: none;
+}
