--- a/src/shared/ui/volumeControl/ui/Volume.module.scss
+++ b/src/shared/ui/volumeControl/ui/Volume.module.scss
@@ -1,8 +1,9 @@
 @import '@/app/styles/mixin.scss';
 
 .VolumeControl {
+  --VolumeControlMaxWidth: 200px;
   @include resetPaddingForDivVkUI;
-  width: 200px;
+  width: var(--VolumeControlMaxWidth);
   display: flex;
   align-items: center;
 }
