--- a/src/app/styles/_fonts.scss
+++ b/src/app/styles/_fonts.scss
@@ -1,1 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+@font-face {
+  font-family: Roboto;
+  src: url('../../assets/fonts/Roboto-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: Roboto;
+  src: url('../../assets/fonts/Roboto-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: Roboto;
+  src: url('../../assets/fonts/Roboto-Italic.woff2') format('woff2');
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: Roboto;
+  src: url('../../assets/fonts/Roboto-Light.ttf') format('woff2');
+  font-weight: 350;
+  font-display: swap;
+}
